--- a/css/styles.css
+++ b/css/styles.css
@@ -526,6 +526,7 @@ body {
     text-transform: uppercase;
     color: var(--primary-bg-color);
     margin-bottom: 20px;
+    display: inline-block;
 }
 
 .footer-social-list {
@@ -593,14 +594,11 @@ body {
 
 .footer-form-btn {
     display: inline-flex;
-    align-items: center;
-    justify-content: center;
     border: none;
     background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     padding: 10px 28px;
-    margin-top: 30px;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -817,11 +815,10 @@ body {
 .form-element {
     display: flex;
     flex-direction: column;
+    margin-bottom: 10px;
 }
 
 .form-element label {
-    margin-top: 10px;
-    margin-bottom: 4px;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
@@ -839,6 +836,7 @@ body {
 
 .input-wrap {
     position: relative;
+    margin-top: 4px;
 }
 
 .input-icon {
@@ -860,14 +858,18 @@ body {
     fill: var(--accent-color);
 }
 
+.input-textarea-wrap {
+    margin-top: 4px;
+}
+
 .form-textarea {
+    resize: none;
+    height: 120px;
+    width: 100%;
     padding: 12px 16px;
-    margin-bottom: 20px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     outline: none;
-    resize: none;
-    height: 120px;
 }
 
 .form-textarea::placeholder {
@@ -880,6 +882,11 @@ body {
 .form-textarea:focus {
     border: 1px solid var(--accent-color);
     border-radius: 4px;
+}
+
+.form-checkbox-wrap {
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 .form-checkbox {
@@ -907,6 +914,12 @@ body {
     color: var(--primary-bg-color);
     margin-right: 7px;
     margin-left: 14px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-icon-wrap:hover,
+.checkbox-icon-wrap:focus {
+    border: 2px solid var(--accent-color);
 }
 
 .form-checkbox input:checked+.checkbox-icon-wrap {
@@ -918,8 +931,7 @@ body {
 }
 
 .wrap-btn {
-    justify-content: center;
-    display: flex;
+    text-align: center;
 }
 
 .form-btn {
@@ -928,7 +940,6 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     padding: 10px 52px;
-    margin-top: 30px;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
